--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,19 +6,19 @@ jobs:
   sast_scan:
     name: Run Bandit Scan
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up python
         uses: actions/setup-python@v5.0.0
 
       - name: Install Bandit
-        run: |
-          pip install bandit
+        run: pip install bandit
+
       - name: Run Bandit Scan
-        run: |
-          bandit -r . -lll -ii -f json -o bandit_findings.json
+        run: bandit -r . -lll -ii -f json -o bandit_findings.json
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         if: always()
@@ -28,6 +28,7 @@ jobs:
   image_scan:
     name: Docker Scout Image Scan
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,17 +36,20 @@ jobs:
       - name: Install docker
         run: sudo apt-get install docker -y
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
       - name: Build docker image
         run: docker image build -t pygoat-image .
-
-      - name: Docker Login
-        run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
-
+          
       - name: Docker Scout Scan
         uses: docker/scout-action@v1.5.0
         with:
-          dockerhub-user: ${{ secrets.DOCKERHUB_USER }}
-          dockerhub-password: ${{ secrets.DOCKERHUB_TOKEN }}
+          command: quickview, cves
+          only-severities: critical
 
 
       
